# coalescence_afterburner

./: .gitignore  CMakeLists.txt  README.md
include/coalescence/: coalescence.h  fourvector.h  threevector.h
src/: coalescence.cc  coalescence_main.cc  fourvector.cc
